--- a/index.html
+++ b/index.html
@@ -5,33 +5,41 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0"> <!-- displays site properly based on user's device -->
 
   <link rel="icon" type="image/png" sizes="32x32" href="./images/favicon-32x32.png">
+  <link rel="stylesheet" href="style.css">
+  <link rel="preconnect" href="https://fonts.googleapis.com">
+  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+  <link href="https://fonts.googleapis.com/css2?family=Red+Hat+Display:wght@500;700;900&display=swap" rel="stylesheet">
   
   <title>Frontend Mentor | Order summary card</title>
 
-  <!-- Feel free to remove these styles or customise in your own stylesheet 👍 -->
-  <style>
-    .attribution { font-size: 11px; text-align: center; }
-    .attribution a { color: hsl(228, 45%, 44%); }
-  </style>
 </head>
 <body>
-
-  Order Summary
-
-  You can now listen to millions of songs, audiobooks, and podcasts on any 
-  device anywhere you like!
-
-  Annual Plan
-  $59.99/year
-
-  Change
-
-  Proceed to Payment
-  Cancel Order
+  <div class="order-summary-card">
+    <div class="title-image">
+      <img id="hero-image" src="images/illustration-hero.svg"/>
+    </div>
+    <div class="title">
+      Order Summary
+    </div>
+    <div class="description-text">
+      You can now listen to millions of songs, audiobooks, and podcasts on any 
+      device anywhere you like!
+    </div>
+    <div class="price-container">
+      <img id="music-icon" src="images/icon-music.svg"/>
+      <div class="pricing-plan">
+        <p class="plan-title">Annual Plan</p>
+        <p class="plan-price">$59.99/year</p>
+      </div>
+      <div id="change-button">Change</div>
+    </div>
+    <button id="proceed-button">Proceed to Payment</button>
+    <button id="cancel-button">Cancel Order</button>
+  </div>
   
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
-    Coded by <a href="#">Your Name Here</a>.
+    Coded by <a href="https://github.com/FerynNo1">FerynNo1</a>.
   </div>
 </body>
 </html>
