--- a/index.html
+++ b/index.html
@@ -16,7 +16,6 @@
 <body>
   <div class="order-summary-card">
     <div class="title-image">
-      <img id="hero-image" src="images/illustration-hero.svg"/>
     </div>
     <div class="title">
       Order Summary
@@ -33,10 +32,10 @@
       </div>
       <div id="change-button">Change</div>
     </div>
-    <button id="proceed-button">Proceed to Payment</button>
-    <button id="cancel-button">Cancel Order</button>
+    <button class="button" id="proceed-button">Proceed to Payment</button><br>
+    <button class="button" id="cancel-button">Cancel Order</button>
   </div>
-  
+
   <div class="attribution">
     Challenge by <a href="https://www.frontendmentor.io?ref=challenge" target="_blank">Frontend Mentor</a>. 
     Coded by <a href="https://github.com/FerynNo1">FerynNo1</a>.
